  * Removed all GenericCacheExtensions - already handled by ReflectionCache. Renamed ReflectionCacheKey to IReflectionCacheKey.
  * Added caching to BuildBindingPredicate()
  * Updated GetMemberExpressions() extension method to support any Expression that can be unwrapped to a MemberExpression.
  * General Guard method improvements

AllOverIt.Assertion
  * Removed methods that asserted an enumerable was a concrete collection type and instead updated .NET Core 3.1
    versions to check for different collection types before falling back to the default Any() Linq method.

AllOverIt.Aws.AppSync.Client
  * Renamed AppSyncCognitoAuthorization to AppSyncAuthorization and deleted AppSyncLambdaAuthorization as it also contains
    an 'authorization' header.

AllOverIt.Pagination
  * New package to provide keyset based pagination for any IQueryable, including EF queries

AllOverIt.EntityFrameworkCore.Pagination
  * New package to provide keyset based pagination extensions for any EF

AllOverIt.ReactiveUI
  * New package                                                     - TESTS PENDING ******************
  * Includes ActivatableViewModel, CountdownTimer


02 Jul 2022
Version 5.9.2
======================================================================================================================
AllOverIt.Aws.AppSync.Client
  * Updated the subscription client so an initial connection established at the time of making a subscription will
    connect using the provided authorization, or the default authorization if one isn't provided.


27 Jun 2022
Version 5.9.1
======================================================================================================================
AllOverIt.Aws.Cdk.AppSync
  * Added missing AuthLambdaDirective support to queries and mutations06 Jun 2022
  
  
06 Jun 2022
Version 5.9.0
======================================================================================================================
AllOverIt