@@ -1,5 +1,4 @@
 ﻿using AllOverIt.Serialization.Binary;
-using AllOverIt.Serialization.Binary.Extensions;
 using System;
 using System.Collections.Generic;
 
@@ -9,11 +8,12 @@ namespace AllOverIt.Pagination
     {
         private static readonly Type ValuesType = typeof(IReadOnlyCollection<object>);
 
-        public override void WriteValue(EnrichedBinaryWriter writer, object value)
+        public override void WriteValue(IEnrichedBinaryWriter writer, object value)
         {
             var continuationToken = (ContinuationToken) value;
 
-            writer.WriteByte((byte) continuationToken.Direction);
+            // Could also use the WriteByte() extension
+            writer.Write((byte) continuationToken.Direction);
 
             // Not using writer.WriteEnumerable() as this assumes at least one value and the token Values can be null (when encoding the first/last page).
             // We could use continuationToken.Values ?? Array.Empty<object>() but then the reader would construct a ContinuationToken with an array of zero
