@@ -1,4 +1,5 @@
-﻿using System;
+﻿using AllOverIt.Serialization.Binary.Exceptions;
+using System;
 using System.Collections.Generic;
 using System.Linq;
 
@@ -7,6 +8,37 @@ namespace AllOverIt.Serialization.Binary.Extensions
     public static class EnrichedBinaryReaderExtensions
     {
         private static readonly Type ObjectType = typeof(object);
+
+        public static string ReadSafeString(this IEnrichedBinaryReader reader)
+        {
+            var hasValue = reader.ReadBoolean();
+
+            return hasValue
+                ? reader.ReadString()
+                : default;
+        }
+
+        public static Guid ReadGuid(this IEnrichedBinaryReader reader)
+        {
+            var bytes = reader.ReadBytes(16);
+            return new Guid(bytes);
+        }
+
+        public static object ReadEnum(this IEnrichedBinaryReader reader)
+        {
+            var enumType = GetEnumType(reader);
+            var value = reader.ReadString();
+
+            return Enum.Parse(enumType, value);
+        }
+
+        public static TEnum ReadEnum<TEnum>(this IEnrichedBinaryReader reader)
+        {
+            var enumType = GetEnumType(reader);
+            var value = reader.ReadString();
+
+            return (TEnum) Enum.Parse(enumType, value);
+        }
 
         public static TValue ReadObject<TValue>(this IEnrichedBinaryReader reader)      // Enumerables are returned where TValue = List<object>. See ReadEnumerable().
         {
@@ -65,6 +97,19 @@ namespace AllOverIt.Serialization.Binary.Extensions
             }
 
             return dictionary.ToDictionary(kvp => (TKey) kvp.Key, kvp => (TValue) kvp.Value);
+        }
+
+        private static Type GetEnumType(IEnrichedBinaryReader reader)
+        {
+            var enumTypeName = reader.ReadString();
+            var enumType = Type.GetType(enumTypeName);
+
+            if (enumType is null)
+            {
+                throw new BinaryReaderException($"Unknown enum type '{enumTypeName}'.");
+            }
+
+            return enumType;
         }
     }
 }
