@@ -5,7 +5,7 @@ namespace AllOverIt.Serialization.Binary
     public interface IEnrichedBinaryValueReader
     {
         Type Type { get; }
-        object ReadValue(EnrichedBinaryReader reader);
-        TValue ReadValue<TValue>(EnrichedBinaryReader reader);
+        object ReadValue(IEnrichedBinaryReader reader);
+        TValue ReadValue<TValue>(IEnrichedBinaryReader reader);
     }
 }
