@@ -5,6 +5,6 @@ namespace AllOverIt.Serialization.Binary
     public interface IEnrichedBinaryValueWriter
     {
         Type Type { get; }
-        void WriteValue(EnrichedBinaryWriter writer, object value);
+        void WriteValue(IEnrichedBinaryWriter writer, object value);
     }
 }
